Add kernel 5 and 6

--- a/kernel_5/Makefile
+++ b/kernel_5/Makefile
@@ -1,17 +1,13 @@
 CC=nvcc
 
-all: euclideanMatrix euclideanMatrixNoPin 
+all: euclideanMatrix
 
 euclideanMatrix: main.cu PrimAlgorithm.o
 	$(CC) PrimAlgorithm.o main.cu -o euclideanMatrix
 
-euclideanMatrixNoPin: mainNoPin.cu PrimAlgorithm.o
-	$(CC) PrimAlgorithm.o mainNoPin.cu -o euclideanMatrixNoPin
-
 PrimAlgorithm.o: PrimAlgorithm.cu PrimAlgorithm.h
 	$(CC) -c PrimAlgorithm.cu -o PrimAlgorithm.o
 
-
 clean:
-	rm -f euclideanMatrix euclideanMatrixNoPin PrimAlgorithm.o
+	rm -f euclideanMatrix PrimAlgorithm.o
 
